WIP: Temporary Changes

--- a/templates/admin/admin_header.html
+++ b/templates/admin/admin_header.html
@@ -80,8 +80,8 @@
                                 </a>
                                 <div class="collapse" id="collapseManager" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="{{ url_for('manager.get_managers') }}">List</a>
-                                        <a class="nav-link" href="{{ url_for('manager.add_manager') }}">Add</a>
+                                        <a class="nav-link" href="{{ url_for('manager.get_managers') }}">Manager List</a>
+                                        <a class="nav-link" href="{{ url_for('manager.add_manager') }}">Add Manager</a>
                                     </nav>
                                 </div>
 
@@ -93,8 +93,8 @@
                                 </a>
                                 <div class="collapse" id="collapseSuperDistributor" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="{{ url_for('super_distributor.all_super_distributor') }}">List</a>
-                                        <a class="nav-link" href="{{ url_for('super_distributor.add_super_distributor') }}">Add</a>
+                                        <a class="nav-link" href="{{ url_for('super_distributor.all_super_distributor') }}"> Super Distributor List</a>
+                                        <a class="nav-link" href="{{ url_for('super_distributor.add_super_distributor') }}">Add Super Distributor</a>
                                     </nav>
                                 </div>
 
@@ -106,8 +106,8 @@
                                 </a>
                                 <div class="collapse" id="collapseDistributor" aria-labelledby="headingThree" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="{{ url_for('distributor.all_distributor') }}">List</a>
-                                        <a class="nav-link" href="{{ url_for('super_distributor.add_distributor') }}">Add</a>
+                                        <a class="nav-link" href="{{ url_for('distributor.all_distributor') }}">Distributor List</a>
+                                        <a class="nav-link" href="{{ url_for('super_distributor.add_distributor') }}">Add Distributor</a>
                                     </nav>
                                 </div>
 
@@ -120,10 +120,10 @@
                                 <div class="collapse" id="collapseKitchens" aria-labelledby="headingFour" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link collapsed" href="{{ url_for('distributor.distrubutor_all_kitchens') }}">
-                                            List
+                                            Kitchens List
                                         </a>
                                         <a class="nav-link collapsed" href="{{ url_for('kitchen.create_kitchen') }}">
-                                            Add
+                                            Add Kitchens
                                         </a>
                                     </nav>
                                 </div>
