--- a/templates/food_item.html
+++ b/templates/food_item.html
@@ -16,7 +16,7 @@
     
     <main>
         <div class="container mt-5">
-            <h1 class="text-center mb-4">Food Items from Kitchen: {{ user_name }}</h1>
+            <h1 class="text-center mb-4">FOOD ITEMS</h1>
 
             {% if food_items %}
                 <div class="row">
