--- a/templates/kitchen/kitchen_header.html
+++ b/templates/kitchen/kitchen_header.html
@@ -137,7 +137,7 @@
                                         Add Food Item
                                     </a>
                                     <a class="nav-link collapsed" href="{{ url_for('food_item.get_food_items_by_kitchen', kitchen_id=user_id) }}">
-                                        List
+                                        Food Item List
                                     </a>
                                 </nav>
                             </div>
