--- a/templates/manager/manager_header.html
+++ b/templates/manager/manager_header.html
@@ -81,8 +81,8 @@
                                 </a>
                                 <div class="collapse" id="collapseSuperDistributor" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="{{ url_for('super_distributor.all_super_distributor') }}">List</a>
-                                        <a class="nav-link" href="{{ url_for('super_distributor.add_super_distributor') }}">Add</a>
+                                        <a class="nav-link" href="{{ url_for('super_distributor.all_super_distributor') }}">Super Distributor List</a>
+                                        <a class="nav-link" href="{{ url_for('super_distributor.add_super_distributor') }}">Add Super Distributor</a>
                                     </nav>
                                 </div>
 
@@ -94,8 +94,8 @@
                                 </a>
                                 <div class="collapse" id="collapseDistributor" aria-labelledby="headingThree" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="{{ url_for('distributor.all_distributor') }}">List</a>
-                                        <a class="nav-link" href="{{ url_for('super_distributor.add_distributor') }}">Add</a>
+                                        <a class="nav-link" href="{{ url_for('distributor.all_distributor') }}">Distributor List</a>
+                                        <a class="nav-link" href="{{ url_for('super_distributor.add_distributor') }}">Add Distributor</a>
                                     </nav>
                                 </div>
 
@@ -108,10 +108,10 @@
                                 <div class="collapse" id="collapseKitchens" aria-labelledby="headingFour" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link collapsed" href="{{ url_for('distributor.distrubutor_all_kitchens') }}">
-                                            List
+                                            Kitchen List
                                         </a>
                                         <a class="nav-link collapsed" href="{{ url_for('kitchen.create_kitchen') }}">
-                                            Add
+                                            Add Kitchen
                                         </a>
                                     </nav>
                                 </div>
