--- a/templates/manager/manager_index.html
+++ b/templates/manager/manager_index.html
@@ -71,7 +71,7 @@
                             <div class="card-footer d-flex align-items-center justify-content-between">
                                 <h4 class="mb-0">{{ total_orders_count }}</h4>
                                 <div class="small text-white"><i class="fas fa-box"></i></div>
-                                <a class="small text-white stretched-link" href="{{ url_for('orders.order_list') }}">View Details</a>
+                                <a class="small text-white stretched-link" href="{{ url_for('order.kitchen_orders') }}">View Details</a>
                                 <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                             </div>
                         </div>
