--- a/templates/order/kitchen_order.html
+++ b/templates/order/kitchen_order.html
@@ -1,5 +1,7 @@
 {% if role == 'SuperDistributor' %}
     {% include 'super_distributor/sd_header.html' %}
+{% elif role == 'Manager' %}
+    {% include 'manager/manager_header.html' %}
 {% elif role == 'Distributor' %}
     {% include 'distributor/d_header.html' %}
 {% else %}
@@ -10,8 +12,17 @@
     <main>
         <div class="container px-4">
             <div class="container my-4">
-                <h2 class="text-center text-primary animate__animated animate__fadeInDown">Orders</h2>
+                <h2 class="text-center text-primary animate__animated animate__fadeInDown">TOTAL ORDERS</h2>
                 <p class="text-muted text-center"></p>
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="messages">
+                        {% for message in messages %}
+                            <p>{{ message }}</p>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                {% endwith %}
                 <!-- Filters -->
                 <div class="row mb-4">
                     <form class="row g-3" method="GET" action="{{ url_for('order.kitchen_orders') }}">
@@ -78,6 +89,7 @@
                                     {% endif %}
                                     <th>Created At</th>
                                     <th>Status</th>
+                                    <th>Action</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -105,6 +117,15 @@
                                     {% endif %}
                                     <td>{{ order.created_at }}</td>
                                     <td>{{ order.status }}</td>
+                                    {% if order.status == "Completed" or order.status == 'Cancelled' %}
+                                        <td>✓</td>
+                                    {% else %}
+                                        {% if role=='Kitchen' %}
+                                        <td>
+                                            <a href="{{ url_for('order.update_status', order_id=order.order_id) }}" class="btn btn-info btn-sm">Update</a>
+                                        </td>
+                                        {% endif %}
+                                    {% endif %}
                                 </tr>
                                 {% endfor %}
                             </tbody>
@@ -117,7 +138,7 @@
                     {% endif %}
                 </div>
             </div>
-            {% include 'sd_footer.html' %}
         </div>
     </main>
+    {% include 'admin/admin_footer.html' %}
 </div>
