--- a/templates/super_distributor/sd_header.html
+++ b/templates/super_distributor/sd_header.html
@@ -78,7 +78,7 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{{ url_for('distributor.all_distributor') }}">All Distributors</a>
+                                    <a class="nav-link" href="{{ url_for('distributor.all_distributor') }}">Distributor List</a>
                                         <a class="nav-link" href="{{ url_for('super_distributor.add_distributor') }}">Add Distributor</a>
                                 </nav>
                             </div>
@@ -90,7 +90,7 @@
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
                                     <a class="nav-link collapsed" href="{{ url_for('distributor.distrubutor_all_kitchens') }}">
-                                        All Kitchens
+                                        Kitchens List
                                     </a>
                                     <a class="nav-link collapsed" href="{{ url_for('kitchen.create_kitchen') }}">
                                         Add Kitchen
