--- a/templates/food_item.html
+++ b/templates/food_item.html
@@ -1,23 +1,21 @@
 {% include 'kitchen/kitchen_header.html' %}
 
 <div id="layoutSidenav_content">
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-    
     <main>
-        <div class="container mt-5">
+        <div class="container mt-3">
             <h1 class="text-center mb-4">FOOD ITEMS</h1>
-
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} alert-dismissible fade show p-3"  role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
             {% if food_items %}
                 <div class="row">
                     {% for item in food_items %}
