--- a/templates/kitchen/kitchen_index.html
+++ b/templates/kitchen/kitchen_index.html
@@ -2,66 +2,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-<style>
-    .card {
-        border-radius: 10px;
-    }
-
-    .card-header {
-        background-color: #7E909A;
-        color: #fff;
-    }
-
-    .chart-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .chart-container canvas {
-        width: 400px;
-        height: 400px;
-        border: 1px solid rgb(126, 120, 120); /* Border */
-        border-radius: 5px; /* Optional: Adds rounded corners */
-        padding: 10px; /* Optional: Adds spacing inside the border */
-    }
-
-    .chart-wrapper {
-        flex: 1;
-        margin: 10px;
-    }
-
-    .card {
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .card:hover {
-        transform: translateY(-10px);
-        box-shadow: 0 10px 15px rgb(126, 120, 120);
-    }
-
-    @keyframes bounceIn {
-        0% {
-            transform: translateY(1000px);
-            opacity: 0;
-        }
-        60% {
-            transform: translateY(-30px);
-            opacity: 1;
-        }
-        80% {
-            transform: translateY(10px);
-        }
-        100% {
-            transform: translateY(0);
-        }
-    }
-
-    .chart-container canvas {
-        animation: bounceIn 1s ease-out;
-    }
-</style>
-
 <div id="layoutSidenav_content">
     <main>
         <div class="container-fluid px-4">
@@ -92,10 +32,10 @@
                         </div>
                         <div class="mr-5"><b>{{ order_count }} Total Orders</b></div>
                       </div>
-                      <a class="card-footer text-white clearfix small z-1" href="{{ url_for('order.kitchen_orders', kitchen_id=user_id) }}">
+                      <a class="card-footer text-white clearfix small z-1" href="{{ url_for('order.kitchen_orders') }}">
                         <span class="float-left">View Details</span>
                         <span class="float-right">
-                          <i class="fa fa-angle-right"></i>
+                          
                         </span>
                       </a>
                     </div>
@@ -106,12 +46,12 @@
                         <div class="card-body-icon">
                           <i class="fa fa-fw fa-list"></i>
                         </div>
-                        <div class="mr-5"><b>₹{{ total_price }} Total Sales</b></div>
+                        <div class="mr-5"><b>₹ {{ total_sales_amount }} Total Sales</b></div>
                       </div>
                       <a class="card-footer text-white clearfix small z-1" href="#">
                         <span class="float-left">View Details</span>
                         <span class="float-right">
-                          <i class="fa fa-angle-right"></i>
+                          
                         </span>
                       </a>
                     </div>
@@ -120,12 +60,12 @@
             <br>
             <!-- Totals Table -->
             <br>
-            <div class="card shadow">
-                <div class="card-header py-3">
+            <div class="card1 shadow">
+                <div class="card-header1 py-3">
                     <h6 class="font-weight-bold">SUMMARY</h6>
                 </div>
                 <table class="table table-striped table-bordered table-hover">
-                    <thead class="thead-dark text-center">
+                    <thead class="thead1 text-center">
                         <tr>
                             <th>Total Sales (₹)</th>
                             <th>Quantity Sold</th>
@@ -140,13 +80,14 @@
                 </table>
             </div>
             <br>
+            <br>
             <!-- Sales Data Table -->
-            <div class="card shadow">
-                <div class="card-header py-3">
-                    <h6 class="m-0 font-weight-bold">Sales Data Table</h6>
+            <div class="card1 shadow">
+                <div class="card-header1 py-3">
+                    <h6 class="font-weight-bold">Sales Data Table</h6>
                 </div>
-                <table class="table table-striped table-bordered table-hover">
-                    <thead class="thead-dark text-center">
+                <table class="table table-striped table-bordered table-hover" id="OrderTable">
+                    <thead class="thead1 text-center">
                         <tr>
                             <th>Sale ID</th>
                             <th>Product Name</th>
@@ -175,18 +116,18 @@
                     {% endif %}
                     </tbody>
                 </table>
+                 <!-- Pagination Controls -->
+                 <div class="d-flex float-right" id="pagination-controls"></div>
             </div>
             <br>
-            
-            <br>  
             <ol class="breadcrumb mt-5 mb-2">
                 <li class="breadcrumb-item active">Statistics</li>
             </ol>
-                    <div class="chart-container mt-2 mb-4">
-                        <div class="chart-wrapper">
+                    <div class="chart-container1 mt-2 mb-4">
+                        <div class="chart-wrapper1">
                             <canvas id="barChart"></canvas>
                         </div>
-                        <div class="chart-wrapper">
+                        <div class="chart-wrapper1">
                             <canvas id="pieChart"></canvas>
                         </div>
                     </div>
