--- a/templates/manager/manager_header.html
+++ b/templates/manager/manager_header.html
@@ -26,7 +26,7 @@
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="{{ url_for('admin_bp.admin_dashboard') }}">FDA</a>
+            <a class="navbar-brand ps-3" href="{{ url_for('manager.manager_home') }}">FDA</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
@@ -67,10 +67,18 @@
                                 {% endif %}
                             </p>                            
                             
-                                <a class="nav-link" href="{{ url_for('manager.manager_dashboard')}}">
+                                <!-- Super Distributor Home -->
+                                <a class="nav-link" href="{{ url_for('manager.manager_home')}}">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                    Home
+                                </a>
+
+                                <!-- Super Distributor Dashboard -->
+                                <a class="nav-link" href="{{ url_for('dashboard.manager_dashboard')}}">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                     Dashboard
                                 </a>
+
                                 <!-- Super Distributor Section -->
                                 <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseSuperDistributor" aria-expanded="false" aria-controls="collapseSuperDistributor">
                                     <div class="sb-nav-link-icon"><i class="fas fa-network-wired"></i></div>
