--- a/templates/admin/admin_header.html
+++ b/templates/admin/admin_header.html
@@ -70,13 +70,13 @@
                                 <!-- Admin Home Section -->
                                 <a class="nav-link" href="{{ url_for('admin_bp.admin_home')}}">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                    Home
+                                    Dashboard
                                 </a>
 
                                 <!-- Dashboard Section -->
                                 <a class="nav-link" href="{{ url_for('dashboard.admin_dashboard')}}">
-                                    <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                                    Dashboard
+                                    <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
+                                    Statistics
                                 </a>
 
                                 <!-- Manager Section -->
