--- a/templates/distributor/d_header.html
+++ b/templates/distributor/d_header.html
@@ -69,6 +69,10 @@
                                 </p> 
                             <a class="nav-link" href="{{ url_for('distributor.distributor_home')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Home
+                            </a>
+                            <a class="nav-link" href="{{ url_for('dashboard.distributor_dashboard')}}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
                             </a>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
