--- a/templates/kitchen/kitchen_header.html
+++ b/templates/kitchen/kitchen_header.html
@@ -81,7 +81,7 @@
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="{{ url_for('kitchen.kitchen_dashboard')}}">FDA</a>
+            <a class="navbar-brand ps-3" href="{{ url_for('kitchen.kitchen_home')}}">FDA</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
@@ -122,7 +122,11 @@
                                         <span class="green-dot"></span>
                                     {% endif %}
                                 </p> 
-                            <a class="nav-link" href="{{ url_for('kitchen.kitchen_dashboard')}}">
+                            <a class="nav-link" href="{{ url_for('kitchen.kitchen_home')}}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Home
+                            </a>
+                            <a class="nav-link" href="{{ url_for('dashboard.kitchen_dashboard')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
                             </a>
