--- a/templates/super_distributor/sd_header.html
+++ b/templates/super_distributor/sd_header.html
@@ -65,8 +65,12 @@
                                 {% if role == 'SuperDistributor' %}
                                     <span class="green-dot"></span>
                                 {% endif %}
-                            </p> 
+                            </p>
                             <a class="nav-link" href="{{ url_for('super_distributor.super_distributor')}}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Home
+                            </a> 
+                            <a class="nav-link" href="{{ url_for('dashboard.super_distributor_dashboard')}}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
                             </a>
